--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -9,3 +9,5 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/chat.js"></script>
+
+{{>menu}}
