--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,25 +1,43 @@
-<h2>Login:</h2>
-<hr>
-<form action="/api/sessions/login" method="post">
-
-    {{#if error}}
-        <div style="font-weight: bolder; color: red;">{{error}}</div>
-    {{/if}}
-
-
-    {{#if mensaje}}
-        <div style="font-weight: bolder; color: blue;">{{mensaje}}</div>
-    {{/if}}
-
-    <input type="email" name="email" placeholder="correo electrónico">
-    <input type="password" name="password" placeholder="contraseña">
-    <input type="text" name="web" value="web" hidden>
-    <br><br>
-    <input type="submit" value="Login">
-</form>
-<br><br>
-<a href="/api/sessions/github">Acceder via Github</a>
-<br><br>
-{{>menu}}
-
-{{!-- <script src="/js/login.js"></script> --}}
+<div class="login-container">
+  <div class="login-form">
+    <h2 class="login-title">Login</h2>
+    <div class="error-message">{{error.error}}</div>
+    <form action="/api/sessions/login" method="post">
+      <input type="text" name="web" value="web" hidden />
+      <div class="mb-3">
+        <input
+          type="email"
+          class="form-control"
+          name="email"
+          placeholder="Email"
+          required
+        />
+      </div>
+      <div class="mb-3">
+        <input
+          type="password"
+          class="form-control"
+          name="password"
+          placeholder="Password"
+          required
+        />
+      </div>
+      <div class="mb-3">
+        <button
+          type="submit"
+          class="btn btn-primary btn-block login-btn"
+        >Login</button>
+      </div>
+    </form>
+    <div class="github-login">
+      <a href="/api/sessions/github" class="github-link">
+        <i class="fab fa-github"></i>
+        Login with GitHub
+      </a>
+    </div>
+    <div class="register-link">
+      Not registered yet?
+      <a href="/register">Register</a>
+    </div>
+  </div>
+</div>
