--- a/src/views/perfil.handlebars
+++ b/src/views/perfil.handlebars
@@ -1,9 +1,29 @@
-<h2>Usuario {{usuario.nombre}}</h2>
-<hr>
-<h3>Datos usuario:</h3>
-<p>Nombre: <strong>{{usuario.nombre}}</strong></p>
-<p>Correo electrónico: <strong>{{usuario.email}}</strong></p>
-<br>
-<a href="products">Comprar</a>
-<br><br>
-{{>menu}}
+{{>navbar}}
+<div class="all-profile">
+  <div class="profile-container">
+    <h2 class="profile-title">Profile</h2>
+      <div class="profile-info">
+        <label for="first_name">First Name:</label>
+        <p>{{user.first_name}}</p>
+      </div>
+      <div class="profile-info">
+        <label for="last_name">Last Name:</label>
+        <p>{{user.last_name}}</p>
+      </div>
+      <div class="profile-info">
+        <label for="email">Email:</label>
+        <p>{{user.email}}</p>
+      </div>
+      <div class="profile-info">
+        <label for="age">Age:</label>
+        <p>{{user.age}}</p>
+      </div>
+    <div class="profile-action">
+      <a
+        href="/api/sessions/logout"
+        class="btn btn-danger logout-btn"
+      >Logout</a>
+    </div>
+  </div>
+</div>
+<script src="/js/cart.js"></script>
