--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,52 +1,36 @@
-<h2>Real Time Products</h2>
-<hr>
-
-<h3>Lista de productos en tiempo real:</h3>
-
-<table>
-    <thead>
+{{>navbar}}
+<main>
+  <div class="table-responsive">
+    <table class="table table-striped">
+      <thead>
         <tr>
-            <th>id</th>
-            <th>title</th>
-            <th>description</th>
-            <th>precio</th>
-            <th>code</th>
-            <th>stock</th>
-            <th>category</th>
-            <th>status</th>
-            <th>image</th>
+          <th>Title</th>
+          <th>Description</th>
+          <th>Code</th>
+          <th>Price</th>
+          <th>Status</th>
+          <th>Stock</th>
+          <th>Category</th>
+          <th>Thumbnails</th>
         </tr>
-    </thead>
-    <tbody id="productos-body">
-    </tbody>
-</table>
-
-<hr>
-<h2>Agregar producto</h2>
-
-<form id="product-form">
-    <label for="title">Title</label>
-    <input type="text" id="title" name="title" required>
-    
-    <label for="description">description</label>
-    <input type="text" id="description" name="description" required>
-
-    <label for="price">Price</label>
-    <input type="text" id="price" name="price" required>
-
-    <label for="code">Code</label>
-    <input type="text" id="code" name="code" required>
-
-    <label for="stock">Stock</label>
-    <input type="text" id="stock" name="stock" required>
-    
-    <label for="category">Category</label>
-    <input type="text" id="category" name="category" required>
-    
-    <button type="submit">Agregar Producto</button>    
-</form>
-
+      </thead>
+      <tbody id="productsContainer">
+        {{#each products}}
+          <tr>
+            <td>{{title}}</td>
+            <td>{{description}}</td>
+            <td>{{code}}</td>
+            <td>${{price}}</td>
+            <td>{{status}}</td>
+            <td>{{stock}}</td>
+            <td>{{category}}</td>
+            <td>{{thumbnails}}</td>
+          </tr>
+        {{/each}}
+      </tbody>
+    </table>
+  </div>
+</main>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script>
-
-{{>menu}}
+<script src="/js/main.js"></script>
+<script src="/js/cart.js"></script>
