--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -30,13 +30,11 @@
   </article>
   <section class="resumenPedido w-100">
     <div class="mascosas">
-      <h2 class="fw-bold">Resumen de su pedido:</h2>
-      <p id="precioTotal">El precio total es de:</p>
+      <h2 class="fw-bold">Order summary:</h2>
+      <p id="precioTotal">Total price:</p>
     </div>
-    <button id="btnf" class="btn btn-success" onclick="purchase('{{user.cart}}')">Finalizar Compra</button>
-    <a href="/products"><button class="btn btn-primary">Seguir Comprando</button></a>
+    <button id="btnf" class="btn btn-success" onclick="purchase('{{user.cart}}')">Complete Purchase</button>
+    <a href="/products"><button class="btn btn-primary">Continue Shopping</button></a>
   </section>
 </main>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/js/cart.js"></script>
