solucion desafio final

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,4 +1,4 @@
-{{>navbar}}{{>navbar}}
+{{>navbar}}
 <main class="mainProducts">
   <article id="products">
 <input type="text" value="{{user.cart}}" id="cart" hidden>
