--- a/src/views/requestPasswordReset.handlebars
+++ b/src/views/requestPasswordReset.handlebars
@@ -2,22 +2,22 @@
   <div class="row justify-content-center">
     <div class="col-md-6 col-lg-4">
       <div class="card mb-4">
-        <div class="card-header">Request Password Reset</div>
+        <div class="card-header">Reset Password</div>
         <div class="card-body">
-          <form action="/request-password-reset" method="post">
+          <form action="/reset/{{token}}" method="post">
             <div class="form-group mb-3">
-              <label for="email">Email address</label>
+              <label for="password">New Password</label>
               <input
-                type="email"
-                name="email"
+                type="password"
+                name="password"
                 class="form-control"
-                id="email"
-                placeholder="Enter your email"
+                id="password"
+                placeholder="Enter new password"
                 required
               />
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Send reset
-              email</button>
+            <button type="submit" class="btn btn-primary btn-block">Reset
+              password</button>
           </form>
         </div>
       </div>
